--- a/parts/GeoDiferencial.tex
+++ b/parts/GeoDiferencial.tex
@@ -50,7 +50,7 @@
 	\subsection{Reparametrització d'una corba}
 	\begin{definition}[Corba]
 		\labelname{corba}\label{def:corba}
-		Siguin \(I\subseteq\mathbb{R}\) un interval i \(\alpha\colon I\longrightarrow\mathbb{R}^{n}\) una funció. Aleshores direm que \(\alpha\) és una corba sobre \(I\).
+		Siguin \(I\subseteq\mathbb{R}\) un interval i \(\alpha\colon I\longrightarrow\mathbb{R}^{n}\) una funció contínua. Aleshores direm que \(\alpha\) és una corba sobre \(I\).
 	\end{definition}
 	\begin{example}
 		\label{ex:corba que uniex dos punts}
@@ -66,7 +66,7 @@
 	\end{example}
 	\begin{definition}[Corba regular]
 		\labelname{corba regular}\label{def:corba regular}
-		Sigui \(\alpha\) una corba sobre \(I\) tal que per a tot \(t\in I\) es satisfà \(\alpha'(t)\neq\vec{0}\). Aleshores direm que \(\alpha\) és regular.
+		Sigui \(\alpha\) una corba diferenciable sobre \(I\) tal que per a tot \(t\in I\) es satisfà \(\alpha'(t)\neq\vec{0}\). Aleshores direm que \(\alpha\) és regular.
 	\end{definition}
 	\begin{definition}[Reparametrització]
 		\labelname{reparametrització d'una corba}\label{def:reparametrització d'una corba}
