--- a/parts/GeoDiferencial.tex
+++ b/parts/GeoDiferencial.tex
@@ -1247,14 +1247,14 @@
 	\begin{definition}[Primera forma fonamental]
 		Siguin \(S\subseteq\mathbb{R}^{3}\) una superfície i \(p\in S\) un punt. Aleshores direm que l'aplicació
 		\begin{align*}
-			\PrimeraFormaFonamental_{p}\colon\EspaiTangent_{p}(S)\times\EspaiTangent_{p}(S)\colon&\longrightarrow\mathbb{R} \\
+			\I_{p}\colon\EspaiTangent_{p}(S)\times\EspaiTangent_{p}(S)\colon&\longrightarrow\mathbb{R} \\
 			(\vec{u},\vec{w})&\longmapsto\prodesc{\vec{v}}{\vec{w}}
 		\end{align*}
 		és la primera forma fonamental de \(S\) en \(p\).
 	\end{definition}
 	\begin{note}
 		Després justificaré això però tenim
-		\[\PrimeraFormaFonamental_{p}(\vec{v},\vec{w})=\vec{v}^{\transposta}\begin{bmatrix}
+		\[\I_{p}(\vec{v},\vec{w})=\vec{v}^{\transposta}\begin{bmatrix}
 			E & F \\ F & G
 		\end{bmatrix}\vec{w}\]
 		i si \(\Psi=\Psi(u,v)\), denotant
